# modern-data-stack-meltano

./: .env.example  .envrc  .gitignore  LICENSE  README  README.md  pyproject.toml
assets/: architecture.py
dbt/jaffle_shop/: .user.yml  dbt_project.yml  profiles.yml
dbt/jaffle_shop/models/marts/: _mart__models.yml  _mart_models.yml  mart_user_purchases.sql  mart_users.sql  orders.sql
dbt/jaffle_shop/models/sources/: _jaffle_shop__sources.yml
dbt/jaffle_shop/models/staging/: stg_customers.sql  stg_locations.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_supplies.sql
dbt/jaffle_shop_duckdb/: dbt_project.yml  profiles.yml
dbt/jaffle_shop_duckdb/macros/: generate_schema_name.sql
dbt/jaffle_shop_duckdb/models/marts/: mart_product_purchases.sql
dbt/jaffle_shop_duckdb/models/sources/: _sources.yml
dbt/jaffle_shop_duckdb/models/staging/: _staging_models.yml  stg_products.sql  stg_purchases.sql  stg_users.sql
dbt/jaffle_shop_duckdb/snapshots/: purchases_snapshot.yml
meltano/: meltano.yml
meltano/analyze/superset/: register_duckdb.py
