[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[project]
name = "modern-data-stack-meltano"
version = "0.1.0"
description = "A Jaffle Shop DuckDB dbt Project"
requires-python = ">=3.9,<3.10"

dependencies = [
    "dbt-core==1.10.13",
    "dbt-duckdb==1.9.6",
    "duckcli==0.2.1",
    "duckdb==1.4.1",
    "meltano==3.9.1",
]

[tool.uv]
python-preference = "only-managed"
