[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[project]
name = "modern_data_stack_meltano"
version = "0.1.0"
description = "A Jaffle Shop DuckDB dbt Project"
# Allow Meltano-managed environments using Python 3.10 or 3.11 to satisfy some plugin requirements
requires-python = ">=3.10,<3.12"

dependencies = [
    "dbt-core==1.10.13",
    "dbt-duckdb==1.9.6",
    "duckcli==0.2.1",
    "duckdb==1.4.1",
    "meltano==3.9.1",
]

[tool.uv]
python-preference = "only-managed"
