[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[project]
name = "modern_data_stack_meltano"
version = "0.1.0"
description = "A Jaffle Shop DuckDB dbt Project"
requires-python = ">=3.10,<3.12"

dependencies = [
    "dbt-core==1.10.13",
    "dbt-duckdb==1.9.6",
    "diagrams>=0.24.4",
    "duckcli==0.2.1",
    "duckdb==1.4.1",
    "graphviz>=0.20.3",
    "meltano==3.9.1",
]

[tool.uv]
python-preference = "only-managed"
